[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-session = "0.4"
actix-multipart = "0.3"
handlebars = { version = "4", features = ["dir_source"] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1"
rand = "0.8"
futures = "0.3.5"